--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Coaching Center</title>
 </head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/styles.css">
 <script src="script.js"></script>
 
 <body>
