--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     <div class="thank-you-section">
         <h1>Thanks For Submitting this Form....</h1>
     </div>
+    <div
+        class="loader">
+        </div>
     <footer>
         copyright &copy;&nbsp;2024 Ankush Das.&nbsp;All rights reserved
     </footer>
