--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Coaching Center</title>
 </head>
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 
 <body>
@@ -100,9 +100,6 @@
     <div class="thank-you-section">
         <h1>Thanks For Submitting this Form....</h1>
     </div>
-    <div
-        class="loader">
-        </div>
     <footer>
         copyright &copy;&nbsp;2024 Ankush Das.&nbsp;All rights reserved
     </footer>
